# GAME

./: .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.core/: assumedExternalFilesCache  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.m2e.core/: GameProject.lifecyclemapping  workspaceState.ser  workspacestate.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
Experiments/: .swp
Experiments/Ashton/: ashton.md
Experiments/Isaac/: helloWorld.java  test.java
Experiments/Parker/: HelloWorld.java
GameProject.zip_expanded/: .project  index.html
GameProject.zip_expanded/GameProject/: .project  HELP.md  pom.xml
GameWebSocket/: .project
Pooh/: .project
Pooh/src/: Pooh.java
UDPConnectionTest/: .project
WebsocketStandAlone/: .project
WebsocketStandAlone/src/: WebSocketConfig.java
client/: Doxyfile  Makefile  README.md  main  main.cpp  main.h
client/GAME Console/: .gitignore  GAMEConsole.sln  GAMEConsole_Windows.vcxproj  GAMEConsole_Windows.vcxproj.filters
client/GAME Console/Debug/: GAMEConsole_Windows.ilk
client/GAME Console/GAME Console/: Application.cpp  Application.h  GAME Console.vcxproj  Makefile  Makefile.txt  main.cpp
client/GAME Console/src/: main.cpp
client/GAMEConsole/: .fuse_hidden0004611400000002  .gitignore  Doxyfile  GAMEConsole.sln  GAMEConsole.vcxproj  GAMEConsole_Windows.sln  GAMEConsole_Windows.vcxproj  GAMEConsole_Windows.vcxproj.filters  Makefile  cw.code-workspace  game  install.sh  paddle_keyboard_controller.cpp  paddle_keyboard_controller.h  paddle_network_controller.h  vgcore.52658.REMOVED.git-id  vgcore.52810.REMOVED.git-id  vgcore.52904.REMOVED.git-id  vgcore.55080.REMOVED.git-id  vgcore.56061.REMOVED.git-id  vgcore.56075.REMOVED.git-id  vgcore.56179.REMOVED.git-id  vgcore.59952.REMOVED.git-id  vgcore.60029.REMOVED.git-id  vgcore.60479.REMOVED.git-id  vgcore.62721.REMOVED.git-id  vgcore.63045.REMOVED.git-id  vgcore.63384.REMOVED.git-id  vgcore.77745.REMOVED.git-id  vgcore.83558.REMOVED.git-id
client/GAMEConsole/Debug/: GAMEConsole_Windows.ilk
client/GAMEConsole/GAMEConsole/: game  (+6 more)
client/GAMEConsole/test/console_test/: CMakeLists.txt  console_test.cpp  console_test.h  sources.cmake
documents/ScreenSketches/: ScreenSketches.epgz
documents/Sketches/: MainMenu.epgz
documents/html/: README_8md.html  client__test_8cpp.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282.js  dir_db3a54907829b36871118d03417739cd.html  dir_db3a54907829b36871118d03417739cd.js  files.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  server__test_8java.html
documents/latex/: client__test_8cpp.tex  dir_41e1742e44e2de38b3bc91f993fed282.tex  dir_db3a54907829b36871118d03417739cd.tex  files.tex  md_README.tex  refman.tex  server__test_8java.tex
experiments/: .gitignore.txt  README.md
experiments/Isaac/: databaseTest.sql  helloWorld.java  hellpWorld.cpp  test.java
experiments/Micah/: README.md
experiments/Parker/: HelloWorld.java  HelloWorld2.java  Test.sql
experiments/ashton/: .gitignore  =68  Doxyfile  Experiments-Workspace.code-workspace  Makefile  README.md  main  main.cpp  setup_pi.sh
java_toMySql/src/: java_toMySql.java
server/: mysql-init.txt
server/.metadata/: version.ini
springboot/: pom.xml
springboot2.0/game_project/: HELP.md
(+5369 files in other folders)
